@@ -1,738 +1,524 @@
 
 package Parser;
-//made by Aykan Ugur all rights belong his coat
 import java.util.ArrayList;
 public class Organizer {
-    private boolean typeFinder,typeRead,stationFinder;
-   
-    private ArrayList<String> tokens; // in
-    private ArrayList<Task> tasks = new ArrayList<>();
-    private ArrayList<JobType> jobs = new ArrayList<>();
-    private ArrayList<Station> stations = new ArrayList<>();
-    private ArrayList<String> jobTokens; // in 
-    private ArrayList<Job> jobArrayList = new ArrayList<>();
-    private int index = 0;
-    private int index2 = 0;
-    private boolean error;
-    private int line = 1;
-    private boolean newLine = false;
-    private boolean firstTime = false;
-    private int maxLine;
-    private String text2;
-    private Boolean jobtypesB = false;
-    private boolean stationTypesB = false;
-    public Organizer(ArrayList<String> tokens,int maxLine,ArrayList<String> jobTokens) { //Constructor
-        this.tokens = tokens;
-        this.maxLine = maxLine;
-        this.jobTokens = jobTokens;
-        for (String token : tokens) { //checking fatal errors before start the start
-            if(token.equals("jobtypes"))
-            {
-                jobtypesB = true;
-            }
-            if(token.equals("stations"))
-            {
-                stationTypesB = true;
-               
-            }
-            if(jobtypesB&&stationTypesB) break;
-            
-        }
-      if(jobtypesB&&stationTypesB) // if everything is ok start to check tasks
-      {
-          taskErrorDetector();
-      }else // if its not ok print whats wrong
-      {
-          if(!jobtypesB)
-          {
-              System.err.println("**WORKFLOW FILE** " + "jobtypes is not exist and it will cause a lots of problem before start the program fix it");
-          }else
-          {
-               System.err.println("**WORKFLOW FILE** " + "stations is not exist and it will cause a lots of problem before start the program fix it");
-          }
+  private ArrayList<String> tokens; // in data from const
+  private ArrayList<Task> tasks = new ArrayList<>(); // define tasks array list
+  private ArrayList<JobType> jobs = new ArrayList<>(); // define jobs (jobtype) array list
+  private ArrayList<Station> stations = new ArrayList<>(); // define stations array list
+  private ArrayList<String> jobTokens; // in data from const
+  private ArrayList<Job> jobArrayList = new ArrayList<>();//job array list defined
+  private int index = 0, index2 = 0, line = 1, maxLine, parantheses = 0; // int defined
+  private boolean newLine = false, error, jobtypesB = false, stationTypesB = false; // booleans defined
+  public Organizer(ArrayList<String> tokens, int maxLine,ArrayList<String> jobTokens) { // Constructor
+    this.tokens = tokens; // for tokens
+    this.maxLine = maxLine; // for maxLine 
+    this.jobTokens = jobTokens; // for job tokens
+    for (String token : tokens) { // checking fatal errors before start the  start                         
+      if (token.equals("jobtypes")) {
+        jobtypesB = true; // if there is jobtypes string in tokens
+      }
+      if (token.equals("stations")) {
+        stationTypesB = true; // if there is stations string in tokens
+      }
+      if (jobtypesB && stationTypesB)
+        break; // if both of them in tokens break it for optimization
+    }
+    if (jobtypesB && stationTypesB) // if everything is ok start to check tasks
+    {
+      taskErrorDetector(); // check task
+    } else // if its not ok print whats wrong
+    {
+      if (!jobtypesB) { // jobtypes is not exist
+        System.err.println("**WORKFLOW FILE** "+ "jobtypes is not exist and it will cause a lots of problem before start the program fix it");
+      } else {// stations is not exist
+        System.err.println("**WORKFLOW FILE** " + "stations is not exist and it will cause a lots of problem before start the program fix it");
       }
     }
-    
-    private void organizeTask() // after task error check this code create task objects and send values to the objects
-    {
-        for (String token : tokens) { 
-            
-            if(token.equals(":line:"))continue; // ignore the :line: its not in data its created by computer
-            index++;
-            
-            if(typeFinder) // start type finder
-            {
-                typeFinder = false;
-                
-            }else
-            {
-               if(token.equals("("))
-               {
-                  typeFinder = true; //start type finder
-                  continue;
-               }
-               if(token.equals(")")) // stop the organize task and start to check jobs
-               {
-                  jobErrorDetector();
-                  break; 
-               } 
-                try {
-                            
-                     float val = (float)Double.parseDouble(token); // if token is digit its add this value prev. task object
-                     tasks.get(tasks.size()-1).setValue(val);
-                        
-                    } catch (NumberFormatException e) {
-                        
-                        tasks.add(new Task(token)); // create new task object if token is not digit
-                    }
-            }
+  }
+  private void organizeTask() // after task error check this code create task objects and send values to the objects
+  {
+    for (int i = 3; i < tokens.size(); i++) { // for loop to move in tokens
+      if (tokens.get(i).equals(":line:")) // ignore lines
+        continue;
+      if (tokens.get(i).equals(")")) { // check for )
+        index = i + 4; // to skip useless tokens
+        jobErrorDetector(); // start to check job types
+        break; // break to end method (loop)
+      } else {
+        if (tokens.get(i).startsWith("t")) { // if its start with t it is task
+          tasks.add(new Task(tokens.get(i)));
+        } else { // if its not start with t it is value
+          tasks.getLast().setValue((float) Double.parseDouble(tokens.get(i))); // convert string (from token) to float to send to last task
         }
+      }
     }
-    
-    private void organizeJobTypes() // after jobs error check this code create job objects and send  values to the objects
-    {
-        boolean jobFinder = false; // define job finder
-        index += 3; // start with jobtypes
-        for (int i =index ; i < tokens.size(); i++) {
-            if(tokens.get(i).equals(":line:"))continue; // ignore the :line: its not in data its created by computer
-               
-           
-          if(tokens.get(i).equals("(")) // start to define jobs
-          {
-              jobFinder = true; // set jobfinder as true
-              jobs.add(new JobType(tokens.get(i+1))); // create new job object
-              i++; // next --> job values
-              continue;
+  }
+  private void organizeJobTypes() // after jobs error check this code create job objects and send  values to the objects
+  {
+    for (int i = index; i < tokens.size(); i++) { // for loop for move in to tokens
+      if (tokens.get(i).equals("(") || tokens.get(i).equals(")")) // ignore ( and ) tokens
+        continue;
+      if (tokens.get(i).equals(":line:")) { // to spot line
+        if (tokens.get(i + 2).equals("stations")) { // if stations spotted after line
+          index = i + 3; // skip useless tokens and
+          StationErrorDetector(); // start to check stations errors
+          break; // break and stop the method (loop)
+        } else { // if its not last line of jobs
+          i = i + 2; // skip useless tokens and 
+          jobs.add(new JobType(tokens.get(i))); // create new jobtype in job arraylist 
+        }
+      } else { // if its not line token
+        if (tokens.get(i).startsWith("t")) { // if its start with t it is task object
+          for (Task task : tasks) { // search for task object
+            if (task.getName().equals(tokens.get(i)))
+              jobs.getLast().getTasks().add(new Task(task.getName(), task.getValue()));  // when method find the same task object ,
+          } // create new task object in last job type object
+        } else {
+          jobs.getLast().getTasks().getLast().setValue((float) Double.parseDouble(tokens.get(i))); // convert token strint to the float to send val
+        }
+      }
+    }
+  }
+  private void organizeStations() // after stations error check , this code create station objects and send values to the that objects
+  {
+    for (int i = index; i < tokens.size(); i++) { // for loop to move in tokens array list
+      if (tokens.get(i).equals("(") || tokens.get(i).equals(")")) // ignore ( and ) tokens
+        continue;
+      if (tokens.get(i).equals(":line:")) { // if token is line
+        try {
+          tokens.get(i + 4); // check is it end of the workflow file ??
+          i = i + 2; // if its not skip 
+          String name = tokens.get(i);
+          float maxCapacity = (float) Double.parseDouble(tokens.get(i + 1)); // check max capacity
+          boolean mutliFlag = false;
+          boolean fifoflag = false;
+          if (tokens.get(i + 2).equals("Y"))
+            mutliFlag = true; // check multiflag
+          if (tokens.get(i + 3).equals("Y"))
+            fifoflag = true; // check fifoflag
+          stations.add(new Station(name, maxCapacity, mutliFlag, fifoflag, 0, 0));
+          i = i + 3;
+        } catch (Exception e) {
+          jobFileErrorCheck();
+          break;
+        }
+
+      } else {
+        if (tokens.get(i).startsWith("t")) {
+          for (Task task : tasks) {
+            if (task.getName().equals(tokens.get(i))) {
+              stations.getLast().getDefaultTasks().add(new Task(task.getName(), task.getValue()));
+              break;
+            }
           }
-          if(jobFinder)
-          {
-              if(tokens.get(i).equals(")")) // until ) add values to job
-              {
-                  
-                   if(tokens.get(i+4).equals("stations")) // this code is a little bit problem in first problem pls check this code!!
-                   {
-                       i = i + 4; // to skip useless tokens
-                       index = i; // set index as i 
-                       StationErrorDetector(); // after finished to organize jobs start to check stations
-                       break;
-                   }
-                   jobFinder = false; // stop job finder
-                   continue;
-              }     
-                   try {
-                            
-                    float val = (float)Double.parseDouble(tokens.get(i)); // check is token a value ?
-                    ArrayList<Task> ts = jobs.get(jobs.size()-1).getTasks(); //if it is digit send values to task
-                    ts.get(ts.size()-1).setValue(val);
-                       
-                    } catch (NumberFormatException e) {
-                        
-                       for (Task task : tasks) {
-                  
-                   if(tokens.get(i).equals(task.getName()))
-                   {
-                       jobs.get(jobs.size()-1).getTasks().add(new Task(task.getName(),task.getValue())); // send task object to job object (has to)
-                   }
-                    }
-              }
+        } else {
+          stations.getLast().getDefaultTasks().getLast().setSpeed((float) Double.parseDouble(tokens.get(i)));
+          if (!tokens.get(i + 1).startsWith("t")) {
+            i++;
+            try {
+              stations.getLast().getDefaultTasks().getLast().setPlusMinus((float) Double.parseDouble(tokens.get(i)));
+            } catch (Exception e) {
+            }
           }
         }
+      }
     }
-    
-    private void organizeStations() // after stations error check , this code create station objects and send values to the that objects
+  }
+  public ArrayList<Task> getTasks() { //*** START OF GET AND SET OBJECTS***
+    return tasks;
+  }
+  public ArrayList<JobType> getJobTypes() {
+    return jobs;
+  }
+  public ArrayList<Station> getStations() {
+    return stations;
+  }
+
+  public ArrayList<Job> getJobArrayList() {
+    return jobArrayList;
+  }
+  //*** END OF GET AND SET OBJECTS***
+  private void taskErrorDetector() // this method check task errors
+  {
+    ArrayList<String> tasks2 = new ArrayList<>(); // to check same tasks
+    if (!tokens.get(1).equals("(")) // check for (
     {
-        index++; // to skip useless tokens
-        for (int i = index; i < tokens.size(); i++) {
-           if(tokens.get(i).equals(":line:"))continue; // ignore the :line: its not in data its created by computer
-            if(tokens.get(i).equals("(")&& stationFinder == false)  //if station finder is not working and its start of stations values
-            {
-                String name = tokens.get(i+1);
-                float maxCapacity = (float)Double.parseDouble(tokens.get(i+2)); // check max capacity
-                boolean mutliFlag = false;
-                boolean fifoflag = false;
-                if(tokens.get(i+3).equals("Y")) mutliFlag = true; // check multiflag
-                if(tokens.get(i+4).equals("Y")) fifoflag = true; // check fifoflag
-                stations.add(new Station(name,maxCapacity,mutliFlag,fifoflag,0,0)); // create a station object and send it to arraylist
-                i = i + 4; // to skip useless tokens
-                stationFinder = true; // start stationFinder
-                continue;
-            }
-            if(stationFinder)
-            {
-                if(tokens.get(i).equals(")"))
-                {
-                    
-                    try {
-                        tokens.get(i+4);
-                    } catch (Exception e) {
-                       jobFileErrorCheck();
-                        break;
-                    }
-                    stationFinder = false;
-                }else
-                {
-                    try {
-                       float val = (float)Double.parseDouble(tokens.get(i)); //to check is token a digit
-                       // second
-                        stations.get(stations.size()-1).getDefaultTasks().getLast().setSpeed(val);// first
-                      
-                       try {
-                           
-                           float val2 = (float)Double.parseDouble(tokens.get(i+1)); //to check is token a digit
-                          
-                          stations.get(stations.size()-1).getDefaultTasks().getLast().setPlusMinus(val2);
-                           
-                       } catch (NumberFormatException e) {
-                           
-                       }
-                        
-                    } catch (NumberFormatException e) {
-                        
-                       for (Task task : tasks) {
-                  
-                   if(tokens.get(i).equals(task.getName())) // if its not digit send task object to stations object
-                   {
-                       stations.get(stations.size()-1).getDefaultTasks().add(new Task(task.getName(),task.getValue()));// first
-                   }
-                    }
-              }
-                }
-                
-            }
-        }
+      System.out.println("**WORKFLOW FILE** "+ "line: " + line + "( is missing");
+      error = true;
     }
-//*** START OF GET AND SET OBJECTS***
-    public ArrayList<Task> getTasks() {
-        return tasks;
-    }
-
-    public void setTasks(ArrayList<Task> tasks) {
-        this.tasks = tasks;
-    }
-
-    public ArrayList<JobType> getJobs() {
-        return jobs;
-    }
-
-    public void setJobs(ArrayList<JobType> jobs) {
-        this.jobs = jobs;
-    }
-
-    public ArrayList<Station> getStations() {
-        return stations;
-    }
-
-    public void setStations(ArrayList<Station> stations) {
-        this.stations = stations;
-    }
-    //*** END OF GET AND SET OBJECTS***
-    private void taskErrorDetector() // this method check task errors
+    if (!tokens.get(2).equals("tasktypes")) // check for tasktypes is wrong or not
     {
-        
-        ArrayList<String> tasks2 = new ArrayList<String>(); //to check same tasks
-       if(!tokens.get(1).equals("("))// check for (
-       {
-           System.out.println("**WORKFLOW FILE** " + "line: "+line + "( is missing");
-           error = true;
-       }
-       if(!tokens.get(2).equals("tasktypes")) // check for tasktypes is wrong or not
-       {
-           error = true;
-           System.out.println("**WORKFLOW FILE** " + "line: " + line + " you wrote tasktypes wrong");
-       }
-        for (int i = 3; i < tokens.size(); i++) {
-           
-                if(tokens.get(i).equals(":line:")) // ignore :line: tokens
-                {
-                  line++;
-                  continue;
-                }
-            
-            if(tokens.get(i).equals("jobtypes")) // to end the code
-            {
-                if(!tokens.get(i-1).equals("("))
-                {
-                    System.out.println("**WORKFLOW FILE** " + "line: "+line + "( is missing"); 
-                    error = true;
-                }
-                if(!tokens.get(i-3).equals(")"))
-                {
-                   System.out.println("**WORKFLOW FILE** " + "line: " +(line-1)+ ") is missing"); 
-                   error = true;
-                }
-                index2 = i+1 ; // to skip useless tokens
-                break;
-            }
-                try {
-                            
-                     float val = (float)Double.parseDouble(tokens.get(i)); // check is it digit 
-                     if(val<0)
-                     {
-                         System.out.println("**WORKFLOW FILE** " + "line: "+line+ " " + tokens.get(i) + " value of task is smaller than 0 ");
-                         error = true;
-                         continue;
-                     }
-                     
-                        
-                    } catch (NumberFormatException e) {
-                     
-                       if(tasks2.contains(tokens.get(i))) // if it is not digit start this code
-                       {
-                           error = true;
-                           System.out.println("**WORKFLOW FILE** " + "line: "+line+ " " + tokens.get(i) + " is already defined");
-                           continue;
-                       }else
-                       {
-                           if(tokens.get(i).equals("(")||tokens.get(i).equals(")")) continue;
-                           if(tokens.get(i).startsWith("t"))
-                           {
-                               tasks2.add(tokens.get(i));
-                           }else
-                           {
-                               error = true;
-                               System.out.println("**WORKFLOW FILE** " + "Line " + line + " this task type is invalid \"" + tokens.get(i) + "\" pls change the name" );
-                           }
- 
-                       }
-                        
-                    }
-                
-               
-        }
-        
-        error(error,"task"); // start error method
-        if(!error)
-        {
-           organizeTask(); // if there is no error start organizetask
-        }
+      error = true;
+      System.out.println("**WORKFLOW FILE** "+ "line: " + line + " you wrote tasktypes wrong");
     }
-    
-    private void jobErrorDetector()
-    {
-         ArrayList<String> jobs2 = new ArrayList<String>();
-        for (int i = index2; i < tokens.size(); i++) {
-          
-                if(!newLine)
-                {  
-                if(tokens.get(i).equals(":line:"))
-                {
-                  i++;
-                  line++;
-                  newLine = true;
-                  if(!tokens.get(i).equals("("))
-                  {
-                    System.out.println("**WORKFLOW FILE** " + "line: "+line + "( is missing");
-                    error = true;
-                  }
-                    i++;
-                    if(jobs2.contains(tokens.get(i)))
-                    {
-                        System.out.println("**WORKFLOW FILE** " + "line : "+line+" job type :" + tokens.get(i)+ " is already defined");
-                        error = true;
-                    }else
-                    {
-                        jobs2.add(tokens.get(i));
-                    }
-                  
-                }
-                continue;
-                }
-                if(newLine)
-                { 
-                 if(tokens.get(i).equals(")")) continue;
-                 
-                if(tokens.get(i).equals(":line:"))
-                {
-                  if(tokens.get(i+1).equals("stations")||tokens.get(i+2).equals("stations"))
-                  {
-                      //to do end the checker
-                      if(!tokens.get(i-1).equals(")"))
-                      {
-                          System.out.println("**WORKFLOW FILE** " + "line: "+line + ") is missing");
-                          error = true;
-                      }
-                      if(!tokens.get(i-2).equals(")"))
-                      {
-                          System.out.println("**WORKFLOW FILE** " + "line: "+line + ") is missing");
-                          error = true;
-                      }
-                         error(error,"jobs");
-                         if(!error)
-                         {
-                             index2 = i;
-                             organizeJobTypes();
-                         }
-                         break;
-                  }
-                  newLine = false;
-                  if(!tokens.get(i-1).equals(")"))
-                  {
-                    System.out.println("**WORKFLOW FILE** " + "line: "+line + ") is missing");
-                    error = true;
-                  }
-                  i = i -1;
-                  continue;
-                }
-                 try {
-                     float val = (float)Double.parseDouble(tokens.get(i));
-                     if(val<0)
-                     {
-                         System.out.println("**WORKFLOW FILE** " + "line: "+line+ " " + tokens.get(i) + " value of task is smaller than 0 ");
-                         error = true;
-                     }  
-                    } catch (NumberFormatException e) {
-                        boolean already = false;
-                        
-                       for(Task taskName : tasks)
-                      {
-                        if(taskName.getName().equals(tokens.get(i)))
-                        {
-                           try {
-                                float val = (float)Double.parseDouble(tokens.get(i+1));
-                                
-                           } catch (Exception x) {
-                              
-                               if(taskName.getValue()==-1)
-                               {
-                                   System.out.println("**WORKFLOW FILE** " + "line : " + line + " task : " + tokens.get(i)+ "value is not defined at tasktypes or jobtypes");
-                                   error = true;
-                               }
-                           }
-                           already = true;
-                                break;
-                          }
-                        
-                          }
-                          if(!already)
-                          {
-                               System.out.println("**WORKFLOW FILE** " + "line : " + line + " task : " + tokens.get(i)+ " is not defined at tasktypes ");
-                           error = true; 
-                          }
-                    }
-                
-                }
-        }
-        
-    }
-    private void StationErrorDetector()
-    {
-        String stationName = "";
-        //start with line 7
-        ArrayList<String> stations2 = new ArrayList<String>();
-        ArrayList<String> tmpTask = new ArrayList<String>();
-        newLine = false;
-        index2 = index2 + 1;
+    for (int i = 3; i < tokens.size(); i++) {
+      if (tokens.get(i).equals(":line:")) // ignore :line: tokens
+      {
         line++;
-        
-        
-                  if(!tokens.get(index2).equals("("))
-                  {
-                    System.out.println("**WORKFLOW FILE** " + "line: "+line + "( is missing");
-                    error = true;
-                  }
-                  index2++;
-                  if(!tokens.get(index2).equals("stations"))
-                    {
-                        System.out.println("**WORKFLOW FILE** " + "line : "+line+" you write stations keyword wrong or there is no stations");
-                        error = true;
-                        
-                    }
-                  stationName = tokens.get(index2);
-                  index2++;
+        continue;
+      }
+      if (tokens.get(i).equals("jobtypes")) // to end the code
+      {
+        if (!tokens.get(i - 1).equals("(")) {
+          System.out.println("**WORKFLOW FILE** "+ "line: " + line + " ( is missing");
+          error = true;
+        }
+        if (!tokens.get(i - 3).equals(")") && !tokens.get(i - 2).equals(")")) {
+          System.out.println("**WORKFLOW FILE** " + "line: " + (line - 1) + ") is missing");
+          error = true;
+        }
+        index2 = i + 1; // to skip useless tokens
+        break;
+      }
+      try {
+        float val = (float) Double.parseDouble(tokens.get(i)); // check is it digit
+        if (val < 0) {
+          System.out.println("**WORKFLOW FILE** "+ "line: " + line + " " + tokens.get(i) + " value of task is smaller than 0 ");
+          error = true;
+        }
+      } catch (NumberFormatException e) {
+        if (tasks2.contains(tokens.get(i))) // if it is not digit start this code
+        {
+          error = true;
+          System.out.println("**WORKFLOW FILE** "+ "line: " + line + " " + tokens.get(i) + " is already defined");
+        } else {
+          if (tokens.get(i).equals("(") || tokens.get(i).equals(")"))
+            continue;
+          if (tokens.get(i).startsWith("t")) {
+            tasks2.add(tokens.get(i));
+          } else {
+            error = true;
+            System.out.println("**WORKFLOW FILE** "+ "Line " + line + " this task type is invalid \"" + tokens.get(i) + "\" pls change the name");
+          }
+        }
+      }
+    }
+    error(error, "task"); // start error method
+    if (!error) {
+      organizeTask(); // if there is no error start organizetask
+    }
+  }
+  private void jobErrorDetector() {
+    ArrayList<String> jobs2 = new ArrayList<>();
+    for (int i = index2; i < tokens.size(); i++) {
+      if (!newLine) {
+        if (tokens.get(i).equals(":line:")) {
+          i++;
+          line++;
+          newLine = true;
+          if (!tokens.get(i).equals("(")) {
+            System.out.println("**WORKFLOW FILE** "+ "line: " + line + "( is missing");
+            error = true;
+          }
+          i++;
+          if (jobs2.contains(tokens.get(i))) {
+            System.out.println("**WORKFLOW FILE** "+ "line : " + line + " job type :" + tokens.get(i) + " is already defined");
+            error = true;
+          } else {
+            jobs2.add(tokens.get(i));
+          }
+        }
+        continue;
+      }
+      if (newLine) {
+        if (tokens.get(i).equals(")"))
+          continue;
 
-        for (int i = index2; i < tokens.size(); i++) {
-            
-            if(!newLine)
-                {  
-                if(tokens.get(i).equals(":line:")) // if our code find :line x : type
-                {
-                  i++;
-                  newLine = true;
-                  
-                    if(!tokens.get(i).equals("("))
-                    {
-                         System.out.println("**WORKFLOW FILE** " + "line : "+line+"("+ " is not defined");
-                         error= true;
-                         
-                    }else
-                    {
-                        i++;
-                    }
-                    if(stations2.contains(tokens.get(i)))
-                    {
-                        System.out.println("**WORKFLOW FILE** " + "line : "+line+" station type :" + tokens.get(i)+ " is already defined");
-                        error = true;
-                    }else
-                    {
-                        stations2.add(tokens.get(i));
-                    }
-                   i++;
-                    try {
-                         float val = (float)Double.parseDouble(tokens.get(i));
-                         if(val<0)
-                         {
-                           System.out.println("**WORKFLOW FILE** " + "line : "+line+tokens.get(i)+ " is negative pls enter numbers which bigger than zero");
-                           error = true;
-                         }
-                    } catch (Exception e) {
-                        
-                        System.out.println("**WORKFLOW FILE** " + "line : "+line+tokens.get(i)+ " is not number pls enter valid maxCapacity");
-                        error = true;
-                    }
-                    i++;
-                    
-                     try {
-                         float val = (float)Double.parseDouble(tokens.get(i));
-                         System.out.println("**WORKFLOW FILE** " + "line : "+line+" " +tokens.get(i)+ " is not Y(yes) or N(no) pls enter valid character");
-                         error = true;
-                        } catch (Exception e) {
-                        
-                       if(!tokens.get(i).equals("y")&&!tokens.get(i).equals("n"))
-                       {
-                           System.out.println("**WORKFLOW FILE** " + "line : "+line+" " +tokens.get(i)+ " is not Y(yes) or N(no) pls enter valid character");
-                           error = true;
-                       }
-                     }
-                     i++;
-                      try {
-                         float val = (float)Double.parseDouble(tokens.get(i));
-                         System.out.println("**WORKFLOW FILE** " + "line : "+line+" " +tokens.get(i)+ " is not Y(yes) or N(no) pls enter valid character");
-                         error = true;
-                        } catch (Exception e) {
-                        
-                       if(!tokens.get(i).equals("y")&&!tokens.get(i).equals("n"))
-                       {
-                           System.out.println("**WORKFLOW FILE** " + "line : "+line+" " +tokens.get(i)+ " is not Y(yes) or N(no) pls enter valid character");
-                           error = true;
-                       }
-                     }
-                      continue;
-                }
-                }else
-            {
-                
-                 if(tokens.get(i).equals(")")) continue;
-                 //to do taskları kontrol et
-                if(tokens.get(i).equals(":line:"))
-                {
-                     line++;
-                  if(line==maxLine)
-                  {
-                      
-                      //to do end the checker
-                      if(!tokens.get(i-1).equals(")"))
-                      {
-                          System.out.println("**WORKFLOW FILE** " + "line: "+line + ") is missing");
-                          error = true;
-                      }
-                      if(!tokens.get(i-2).equals(")"))
-                      {
-                          System.out.println("**WORKFLOW FILE** " + "line: "+line + ") is missing");
-                          error = true;
-                      }
-                         error(error,"Stations");
-                         if(!error)
-                         {
-                             for (JobType job : jobs) {
-                                 boolean defined = false;
-                                 String text = null;
-                                 for (Task task : job.getTasks()) {
-                                     if(defined) break;
-                                     for (String string : tmpTask) {
-                                         if(defined) break;
-                                         if(task.getName().equals(string))
-                                         {
-                                             text = task.getName();
-                                             defined = true;
-                                             break;
-                                         }
-                                         
-                                         if(defined) break;
-                                     }
-                                     if(defined) break;
-                                 }
-                                 if(!defined)
-                                     {
-                                         error = true;
-                                         System.out.println("**WORKFLOW FILE** " + "you defined " + text +" and used in jobs but you did not use");
-                                     }
-                             }
-                             
-                             for (Task task : tasks) {
-                                 boolean defined = false;
-                                
-                                 
-                                 for (String string : tmpTask) {
-                                     if(defined) break;
-                                     
-                                     if(string.equals(task.getName()))
-                                     {
-                                         defined = true;
-                                         break;
-                                     }
-                                     if(defined) break;
-                                 }
-                                     if(!defined) System.out.println("**WORKFLOW FILE** " + task.getName()+" is defined but you did not use it be carefull");
-                                 }
-                                 organizeStations();
-                             }
-                             
-                             
-                         break;
-                  }
-                  newLine = false;
-                  if(!tokens.get(i-1).equals(")"))
-                  {
-                    System.out.println("**WORKFLOW FILE** " + "line: "+line + ") is missing");
-                    error = true;
-                  }
-                  i = i -1;
-                  continue;
-                }
-                 try {
-                     float val = (float)Double.parseDouble(tokens.get(i));
-                     if(val<0)
-                     {
-                         System.out.println("**WORKFLOW FILE** " + "line: "+line+ " " + tokens.get(i-1) + " value of task is smaller than 0 ");
-                         error = true;
-                     }  
-                    } catch (NumberFormatException e) {
-                        boolean already = false;
-                        
-                       for(Task taskName : tasks)
-                      {
-                        if(taskName.getName().equals(tokens.get(i)))
-                        {
-                            tmpTask.add(taskName.getName());
-                            already = true;
-                            break;
-                          }
-                        
-                          }
-                          if(!already)
-                          {
-                               System.out.println("**WORKFLOW FILE** " + "line : " + line + " task : " + tokens.get(i)+ " is not defined at tasktypes ");
-                               error = true;
-                          }
-                    
-                
-                }
+        if (tokens.get(i).equals(":line:")) {
+          if (tokens.get(i + 1).equals("stations") || tokens.get(i + 2).equals("stations")) {
+            // to do end the checker
+            if (!tokens.get(i - 1).equals(")")) {
+              System.out.println("**WORKFLOW FILE** "+ "line: " + line + ") is missing");
+              error = true;
             }
-            
-        }
-        
-    }
-    
-    private void error(boolean error, String text)
-    {
-        if(error) System.err.println("Before start the program or see other errors pls fix "+ text + " errors"+
-                "\ndo not forget these errors only "+ text+" errors, there may be more errors in other variables");
-    }
-    
-    //*** End of the workflow file methods**//
-    
-    private void jobOrganizer()
-    {
-        boolean jobFinder = false;
-         for (int i = 0; i < jobTokens.size(); i++) {
-            
-             if(jobTokens.get(i).equals(":line:")&& !jobFinder)
-             {
-                 jobFinder = true;
-                 i++;
-                 jobArrayList.add(new Job(jobTokens.get(i),null,-1,-1));
-                 break;
-             }
-             if(jobFinder)
-             {
-                 if(jobTokens.get(i).equals(":line:"))
-                 {
-                     jobFinder = false;
-                     i = i - 1;
-                 }else
-                 {
-                     for (JobType job : jobs) {
-                         if(job.getName().equals(jobTokens.get(i))) 
-                         {
-                             jobArrayList.get(jobArrayList.size()-1).setJobType(new JobType(job.getTasks(),job.getName()));
-                             i++;
-                             break;
-                         }
-                     }
-                     jobArrayList.get(jobArrayList.size()-1).setJobId((float)Double.parseDouble(jobTokens.get(i)));
-                     i++;
-                     jobArrayList.get(jobArrayList.size()-1).setJobTypeId((float)Double.parseDouble(jobTokens.get(i)));
-                     
-                 }
-             }
-             
-        }
-            
-        
-    }
-    
-    private void jobFileErrorCheck()
-    {
-        typeFinder = false;
-        line = 1;
-        ArrayList<String> jobStrings = new ArrayList<>();
-        for (int i = 0; i < jobTokens.size(); i++) {
-            
-            if(jobTokens.get(i).equals(":line:"))
-            {
-                line++;
-                i++;
-                if(!jobStrings.contains(jobTokens.get(i)))
-                {
-                    jobStrings.add(jobTokens.get(i));
-                }else
-                {
-                    // to do warn
-                    error = true;
-                    System.out.println("**JOB FILE** " + "Line "+ line + ": you already defined " + jobTokens.get(i));
-                }
-                i++;
-                Boolean check = false;
-                for (JobType jobType :jobs ) {
-                    if(jobType.getName().equals(jobTokens.get(i)))
-                    {
-                        check = true;
-                        break;
-                    }
-                }
-                if(!check)
-                {
-                    error = true;
-                     System.out.println("**JOB FILE** " + "Line "+ line + ": you did not define " + jobTokens.get(i) + " in jobtypes");
-                    //to do warn
-                }
-                
-            }else
-            {
-                try {
-                    float val =  (float)Double.parseDouble(jobTokens.get(i));
-                    if(val<0)
-                    {
-                         System.out.println("**JOB FILE** " + "Line "+ line + ": "+ jobTokens.get(i) + " is negative");
-                         error = true;
-                        // to do val is negativ
-                    }
-                } catch (Exception e) {
-                    
-                    // to do 
-                    error = true;
-                     System.out.println("**JOB FILE** " + "Line "+ line +": " + jobTokens.get(i) + " is not number");
-                }
+            if (!tokens.get(i - 2).equals(")")) {
+              System.out.println("**WORKFLOW FILE** "+ "line: " + line + ") is missing");
+              error = true;
             }
-            
-            
+            error(error, "jobs");
+            if (!error) {
+              index2 = i;
+              organizeJobTypes();
+            }
+            break;
+          }
+          newLine = false;
+          if (!tokens.get(i - 1).equals(")")) {
+            System.out.println("**WORKFLOW FILE** "+ "line: " + line + ") is missing");
+            error = true;
+          }
+          i = i - 1;
+          continue;
         }
-        if(!error)
-        {
-            jobOrganizer();
-        }else
-        {
-            error(error,"jobFile");
+        try {
+          float val = (float) Double.parseDouble(tokens.get(i));
+          if (val < 0) {
+            System.out.println("**WORKFLOW FILE** "+ "line: " + line + " " + tokens.get(i) + " value of task is smaller than 0 ");
+            error = true;
+          }
+        } catch (NumberFormatException e) {
+          boolean already = false;
+          for (Task taskName : tasks) {
+            if (taskName.getName().equals(tokens.get(i))) {
+              try {
+                float val = (float) Double.parseDouble(tokens.get(i + 1));
+
+              } catch (Exception x) {
+                if (taskName.getValue() == -1) {
+                  System.out.println("**WORKFLOW FILE** "+ "line : " + line + " task : " + tokens.get(i) + "value is not defined at tasktypes or jobtypes");
+                  error = true;
+                }
+              }
+              already = true;
+              break;
+            }
+          }
+          if (!already) {
+            System.out.println("**WORKFLOW FILE** " + "line : " + line + " task : " + tokens.get(i) + " is not defined at tasktypes ");
+            error = true;
+          }
         }
+      }
     }
+  }
+  private void StationErrorDetector() {
+    // start with line 7
+    ArrayList<String> stations2 = new ArrayList<String>();
+    ArrayList<String> tmpTask = new ArrayList<String>();
+    newLine = false;
+    index2 = index2 + 1;
+    line++;
+    if (!tokens.get(index2).equals("(")) {
+      System.out.println("**WORKFLOW FILE** "+ "line: " + line + "( is missing");
+      error = true;
+    }
+    index2 = index2 + 2;
+    for (int i = index2; i < tokens.size(); i++) {
+      if (!newLine) {
+        if (tokens.get(i).equals(":line:")) // if our code find :line x : type
+        {
+          i++;
+          newLine = true;
+          if (!tokens.get(i).equals("(")) {
+            System.out.println("**WORKFLOW FILE** "+ "line : " + line + "(" + " is not defined");
+            error = true;
+          } else {
+            i++;
+          }
+          if (stations2.contains(tokens.get(i))) {
+            System.out.println("**WORKFLOW FILE** "+ "line : " + line + " station type :" + tokens.get(i) + " is already defined");
+            error = true;
+          } else {
+            stations2.add(tokens.get(i));
+          }
+          i++;
+          try {
+            float val = (float) Double.parseDouble(tokens.get(i));
+            if (val < 0) {
+              System.out.println("**WORKFLOW FILE** "+ "line : " + line + tokens.get(i) + " is negative pls enter numbers which bigger than zero");
+              error = true;
+            }
+          } catch (Exception e) {
+            System.out.println("**WORKFLOW FILE** "+ "line : " + line + tokens.get(i) + " is not number pls enter valid maxCapacity");
+            error = true;
+          }
+          i++;
+          try {
+            float val = (float) Double.parseDouble(tokens.get(i));
+            System.out.println("**WORKFLOW FILE** "+ "line : " + line + " " + tokens.get(i) + " is not Y(yes) or N(no) pls enter valid character");
+            error = true;
+          } catch (Exception e) {
+            if (!tokens.get(i).equals("y") && !tokens.get(i).equals("n")) {
+              System.out.println("**WORKFLOW FILE** "+ "line : " + line + " " + tokens.get(i) + " is not Y(yes) or N(no) pls enter valid character");
+              error = true;
+            }
+          }
+          i++;
+          try {
+            float val = (float) Double.parseDouble(tokens.get(i));
+            System.out.println("**WORKFLOW FILE** "+ "line : " + line + " " + tokens.get(i) + " is not Y(yes) or N(no) pls enter valid character");
+            error = true;
+          } catch (Exception e) {
+            if (!tokens.get(i).equals("y") && !tokens.get(i).equals("n")) {
+              System.out.println("**WORKFLOW FILE** "+ "line : " + line + " " + tokens.get(i) + " is not Y(yes) or N(no) pls enter valid character");
+              error = true;
+            }
+          }
+        }
+      } else {
+        if (tokens.get(i).equals(")"))
+          continue;
+        if (tokens.get(i).equals(":line:")) {
+          line++;
+          if (line == maxLine) {
+            if (!tokens.get(i - 1).equals(")")) {
+              System.out.println("**WORKFLOW FILE** "+ "line: " + line + ") is missing");
+              error = true;
+            }
+            if (!tokens.get(i - 2).equals(")")) {
+              System.out.println("**WORKFLOW FILE** "+ "line: " + line + ") is missing");
+              error = true;
+            }
+            error(error, "Stations");
+            if (!error) {
+              for (JobType job : jobs) {
+                boolean defined = false;
+                String text = null;
+                for (Task task : job.getTasks()) {
+                  if (defined)
+                    break;
+                  for (String string : tmpTask) {
+                    if (defined)
+                      break;
+                    if (task.getName().equals(string)) {
+                      text = task.getName();
+                      defined = true;
+                      break;
+                    }
+                    if (defined)
+                      break;
+                  }
+                  if (defined)
+                    break;
+                }
+                if (!defined) {
+                  error = true;
+                  System.out.println("**WORKFLOW FILE** "+ "you defined " + text + " and used in jobs but you did not use");
+                }
+              }
+              for (Task task : tasks) {
+                boolean defined = false;
+                for (String string : tmpTask) {
+                  if (defined)
+                    break;
+                  if (string.equals(task.getName())) {
+                    defined = true;
+                    break;
+                  }
+                  if (defined)
+                    break;
+                }
+                if (!defined)
+                  System.out.println("**WORKFLOW FILE** " + task.getName() + " is defined but you did not use it be careful");
+              }
+                for (String token : tokens) {
+                   if(token.equals("(")||token.equals(")"))  parantheses++;
+                }
+                if((parantheses%2)>0)
+                {
+                    error = true;
+                    System.out.println("**WORKFLOW FILE** " + "you used extra brackets, this may cause an error pls fix it before start the program");
+                }
+              organizeStations();
+            }
+            break;
+          }
+          newLine = false;
+          if (!tokens.get(i - 1).equals(")")) {
+            System.out.println("**WORKFLOW FILE** "+ "line: " + line + ") is missing");
+            error = true;
+          }
+          i = i - 1;
+          continue;
+        }
+        try {
+          float val = (float) Double.parseDouble(tokens.get(i));
+          if (val < 0) {
+            System.out.println("**WORKFLOW FILE** "+ "line: " + line + " " + tokens.get(i - 1) + " value of task is smaller than 0 ");
+            error = true;
+          }
+        } catch (NumberFormatException e) {
+          boolean already = false;
+
+          for (Task taskName : tasks) {
+            if (taskName.getName().equals(tokens.get(i))) {
+              tmpTask.add(taskName.getName());
+              already = true;
+              break;
+            }
+          }
+          if (!already) {
+            System.out.println("**WORKFLOW FILE** "+ "line : " + line + " task : " + tokens.get(i) + " is not defined at tasktypes ");
+            error = true;
+          }
+        }
+      }
+    }
+  }
+  private void error(boolean error, String text) {
+    if (error)
+      System.err.println("Before start the program or see other errors pls fix " + text + " errors"+ "\ndo not forget these errors only " + text + " errors, there may be more errors in other variables");
+  }//*** End of the workflow file methods**//
+  private void jobOrganizer() {
+    boolean jobFinder = false;
+    for (int i = 0; i < jobTokens.size(); i++) {
+      if (jobTokens.get(i).equals(":line:") && !jobFinder) {
+        i++;
+        jobArrayList.add(new Job(jobTokens.get(i), null, -1, -1));
+        break;
+      }
+      if (jobFinder) {
+        if (jobTokens.get(i).equals(":line:")) {
+          jobFinder = false;
+          i = i - 1;
+        } else {
+          for (JobType job : jobs) {
+            if (job.getName().equals(jobTokens.get(i))) {
+              jobArrayList.get(jobArrayList.size() - 1).setJobType(new JobType(job.getTasks(), job.getName()));
+              i++;
+              break;
+            }
+          }
+          jobArrayList.get(jobArrayList.size() - 1).setStartTime((float) Double.parseDouble(jobTokens.get(i)));
+          i++;
+          jobArrayList.get(jobArrayList.size() - 1).setDuration((float) Double.parseDouble(jobTokens.get(i)));
+        }
+      }
+    }
+  }
+  private void jobFileErrorCheck() {
+    line = 1;
+    ArrayList<String> jobStrings = new ArrayList<>();
+    for (int i = 0; i < jobTokens.size(); i++) {
+      if (jobTokens.get(i).equals(":line:")) {
+        line++;
+        i++;
+        if (!jobStrings.contains(jobTokens.get(i))) {
+          jobStrings.add(jobTokens.get(i));
+        } else {
+          error = true;
+          System.out.println("**JOB FILE** "+ "Line " + line + ": you already defined " + jobTokens.get(i));
+        }
+        i++;
+        Boolean check = false;
+        for (JobType jobType : jobs) {
+          if (jobType.getName().equals(jobTokens.get(i))) {
+            check = true;
+            break;
+          }
+        }
+        if (!check) {
+          error = true;
+          System.out.println("**JOB FILE** "+ "Line " + line + ": you did not define " + jobTokens.get(i) + " in jobtypes");
+        }
+      } else {
+        try {
+          float val = (float) Double.parseDouble(jobTokens.get(i));
+          if (val < 0) {
+            System.out.println("**JOB FILE** "+ "Line " + line + ": " + jobTokens.get(i) + " is negative");
+            error = true;
+          }
+        } catch (Exception e) {
+          error = true;
+          System.out.println("**JOB FILE** "+ "Line " + line + ": " + jobTokens.get(i) + " is not number");
+        }
+      }
+    }
+    if (!error) {
+      jobOrganizer();
+    } else {
+      error(error, "jobFile");
+    }
+  }
 }
